<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fisgodroid</string>
    <string name="title_activity_chat">FisgoDroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_general">General</string>
    <string name="title_friends">Friends</string>
    <string name="title_admin">Administrator</string>
    <string name="remember_me">Remember me</string>
    <string name="send_chat">Send</string>
    <string name="general">General</string>
    <string name="friends">Friends</string>
    <string name="admin">Administrator</string>
    <string name="send_as">Send as:</string>
    <string name="error">Error</string>
    <string name="message_too_short">Message too short</string>
    <string name="message_too_soon">You have to wait %1$d seconds between messages</string>
    <string name="logout">Log out</string>
    <string name="click_to_open">Tap to open</string>
    <string name="you_have_pending_notifications">You have %1$d pending notifications:</string>
    <string name="messagebox_hint"><small><i>Write your message here</i></small></string>
    <string name="savelog">Save log</string>
    <string name="save_successful">Saved successfully</string>
    <string name="save_failed">Could not save</string>
    <string name="settings">Settings</string>
    <string name="title_activity_new_chat">NewChatActivity</string>
    <string name="hello_world">Hello world!</string>
	<string name="action_take_picture">Take picture</string>
	<string name="action_only_friends">Only friends chat</string>
	<string name="hide_action_bar">Hide action bar</string>
	<string name="notifications">Notifications</string>
	<string name="private_messages">new private messages</string>
	<string name="new_posts">new posts</string>
	<string name="new_comments">new comment responses</string>
	<string name="new_friends">new friends</string>
</resources>
