<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:yourapp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_take_picture"
        android:icon="@drawable/camera"
        android:title="@string/action_take_picture"
        android:actionLayout="@layout/take_picture_layout"
        yourapp:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        yourapp:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_only_friends"
        android:checkable="true"
        android:checked="false"
        android:title="@string/action_only_friends"
        yourapp:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_savelog"
        android:title="@string/savelog"
        yourapp:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout"
        yourapp:showAsAction="ifRoom">
    </item>

</menu>